jupyter/my-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: imreddy-jupyter
  annotations:
    # If the class annotation is not specified it defaults to "gce".
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "jupyter-ingress-address"
    networking.gke.io/managed-certificates: "jupyter-tls"
    beta.cloud.google.com/backend-config: '{"default": "config-default"}'
spec:
  defaultBackend:
    service:
      name: proxy-public
      port:
        number: 80
